kustomize/echo-api/cluster-ns-echo-api.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: echo-api
  labels:
    argocd.argoproj.io/managed-by: openshift-gitops
