kustomize/echo-api/echo-api-httproute-echo-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echo-api
  namespace: echo-api
  labels:
    app.kubernetes.io/name: echo-api
    app.kubernetes.io/part-of: connectivity-link
spec:
  hostnames:
    - echo.globex.placeholder
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: prod-web
      namespace: ingress-gateway
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: echo-api
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
